--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -14,6 +14,11 @@ body {
   line-height: normal;
 }
 
+.wrapper {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 button,
 input,
 select,
